# bitscript

./: .gitignore  README.md  meson.build
lib/: compiler.c  meson.build
tools/: bsc.c  meson.build
